RESOLVED FIXED186623
[Win] Fix build break after r232815 (SupportedPluginIdentifier)
https://bugs.webkit.org/show_bug.cgi?id=186623
Summary [Win] Fix build break after r232815 (SupportedPluginIdentifier)
Basuke Suzuki
Reported 2018-06-14 10:09:09 PDT
There're some places still using old name.
Attachments
FIX (2.99 KB, patch)
2018-06-14 10:14 PDT, Basuke Suzuki
no flags
Basuke Suzuki
Comment 1 2018-06-14 10:14:28 PDT
youenn fablet
Comment 2 2018-06-14 10:18:10 PDT
Comment on attachment 342737 [details] FIX Thanks!
WebKit Commit Bot
Comment 3 2018-06-14 10:57:21 PDT
Comment on attachment 342737 [details] FIX Clearing flags on attachment: 342737 Committed r232843: <https://trac.webkit.org/changeset/232843>
WebKit Commit Bot
Comment 4 2018-06-14 10:57:22 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-06-14 10:58:25 PDT
Note You need to log in before you can comment on or make changes to this bug.