[Win] Fix build break after r232815 (SupportedPluginIdentifier) https://bugs.webkit.org/show_bug.cgi?id=186623

Reviewed by Youenn Fablet.

* WebCoreSupport/WebPluginInfoProvider.cpp:
(WebPluginInfoProvider::pluginInfo):
(WebPluginInfoProvider::webVisiblePluginInfo):
* WebCoreSupport/WebPluginInfoProvider.h:


Canonical link: https://commits.webkit.org/201948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232843 268f45cc-cd09-0410-ab3c-d52691b4dbfc